app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
  namespace: gitops-poc
spec:
  selector:
    app: gitops-app
  ports:
    - port: 8080
      targetPort: 8080
