app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-app
  namespace: gitops-poc
spec:
  to:
    kind: Service
    name: gitops-app
  port:
    targetPort: 8080
